--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Kunqian Zhu's Blog
+title: 朱坤乾的博客
 SEOTitle: 朱坤乾的博客 | Kunqian Zhu's Blog
 header-img: img/post-bg-desk.jpg
 email: 1161952677@qq.com
