--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: 朱坤乾的博客
-SEOTitle:  Kunqian Zhu's Blog
+title: Kunqian Zhu's Blog
+SEOTitle: 朱坤乾的博客 | Kunqian Zhu's Blog
 header-img: img/post-bg-desk.jpg
 email: 1161952677@qq.com
 description: "Every failure is leading towards success."
