--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Kunqian Zhu's Blog
 SEOTitle: 朱坤乾的博客 | Kunqian Zhu's Blog
 header-img: img/post-bg-desk.jpg
-email: 1161952677@qq.com
+email: zhukunqian09@foxmail.com
 description: "Every failure is leading towards success."
 keyword: "Kunqian Zhu's, Change the World"
 url: "http://zhukqian.github.io/"          # your host, for absolute URL
