--- a/_config.yml
+++ b/_config.yml
@@ -59,15 +59,15 @@ kramdown:
 # Disqus（https://disqus.com/）
 # disqus_username: 
 
-# Gitalk
-# gitalk:
-#   enable: true    #是否开启Gitalk评论
-#   clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-#   clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-#   repo: qiubaiying.github.io    #仓库名称
-#   owner: qiubaiying    #github用户名
-#   admin: qiubaiying
-#   distractionFreeMode: true #是否启用类似FB的阴影遮罩
+Gitalk
+gitalk:
+enable: true    #是否开启Gitalk评论
+clientID: 7d13c1dd93e70b21bd8b                            #生成的clientID
+clientSecret: 797f5155a708f900c236a2d62ff96ebc34411003    #生成的clientSecret
+repo: Zhukqian.github.io    #仓库名称
+owner: Zhukqian    #github用户名
+admin: Zhukqian
+distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
 # 统计
