--- a/_config.yml
+++ b/_config.yml
@@ -61,13 +61,13 @@ kramdown:
 
 # Gitalk
 gitalk:
-enable: true    #是否开启Gitalk评论
-clientID: '7d13c1dd93e70b21bd8b'                            #生成的clientID
-clientSecret: '797f5155a708f900c236a2d62ff96ebc34411003'    #生成的clientSecret
-repo: Zhukqian.github.io    #仓库名称
-owner: Zhukqian    #github用户名
+enable: true
+clientID: 7d13c1dd93e70b21bd8b
+clientSecret: 797f5155a708f900c236a2d62ff96ebc34411003
+repo: Zhukqian.github.io
+owner: Zhukqian
 admin: [Zhukqian]
-distractionFreeMode: true #是否启用类似FB的阴影遮罩
+distractionFreeMode: true
 
 
 # 统计
